# core

./: CMakeLists.txt
include/: daemon.h
src/: daemon.cpp
